fixed [id] tech stack layout issue

--- a/styles/Project/Project.module.css
+++ b/styles/Project/Project.module.css
@@ -95,6 +95,7 @@
 
 .stack_container {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5rem;
 }
 
